--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
   <title>聊天機器人</title>
 </head>
 <body>
-  <script
+   <script
     data-embed-id="7bf98a76-4831-4e21-9d67-c767ad26a7ee"
+    data-chat-icon="chatBubble"
+    data-brand-image-url="https://cdn.rakosell.com/4d0efee8-b330-43ee-bd4e-96d99ef682f1/3.png"
+    data-assistant-icon="https://cdn.rakosell.com/4d0efee8-b330-43ee-bd4e-96d99ef682f1/3.png"
+    data-assistant-name="AIM智能應用學院"
+    data-sponsor-text="AIM智能應用學院"
+    data-sponsor-link="https://aimbiz.co"
     data-base-api-url="https://aimbiz.useanything.com/api/embed"
+    data-window-height="98.5%" 
+    data-window-width="98%"
+    data-open-on-load="on"
+    data-greeting="我是網站的AI小助手，有關於網站的問題歡迎詢問，我會盡力協助你喔！"
+    data-user-bg-color="#042473"
     src="https://aimbiz.useanything.com/embed/anythingllm-chat-widget.min.js">
   </script>
 </body>
