--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 </head>
 <body>
    <script
-    data-embed-id="7bf98a76-4831-4e21-9d67-c767ad26a7ee"
+    data-embed-id="ade12949-3195-4f1c-ab56-cae179c5f69c"
     data-chat-icon="chatBubble"
     data-brand-image-url="https://cdn.rakosell.com/4d0efee8-b330-43ee-bd4e-96d99ef682f1/3.png"
     data-assistant-icon="https://cdn.rakosell.com/4d0efee8-b330-43ee-bd4e-96d99ef682f1/3.png"
-    data-assistant-name="AIM智能應用學院"
+    data-assistant-name="AI牙醫數據營運平台"
     data-sponsor-text="AIM智能應用學院"
     data-sponsor-link="https://aimbiz.co"
     data-base-api-url="https://aimbiz.useanything.com/api/embed"
